syntax = "proto3";
package notes_service;

message Note {
  int32 id = 1;
  string text = 2;
  int32 notebook_id = 3;
}

message Notebook {
  int32 id = 1;
  string name = 2;
  repeated Note notes = 3;
}

message GetNotebook {
  int32 notebook_id = 1;
}

service NotesService {
  rpc get_notebook (GetNotebook) returns (Notebook);
}
